# taip

./: CMakeLists.txt  LICENSE  README.md  colors.c  colors.h  config.c  config.h  game.c  game.h  logic.c  logic.h  main.c  render.c  render.h  shell.nix  taip.conf.example  util.c  util.h
wordlists/: english1k.txt  english250.txt  mt_english1000.txt  mt_polish200.txt  polish250.txt  programming_c.txt
